Shang New Live/src/objects/Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date_Time__c</fullName>
        <label>Action Date/ ime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Date_Time__c</fullName>
        <label>Actual Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Backend_Last_Updated_DateTime__c</fullName>
        <label>Backend Last Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checklist_Master_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master Item</label>
        <referenceTo>Checklist_Master_Item__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Type__c</fullName>
        <formula>TEXT(Checklist__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FM_SN__c</fullName>
        <formula>VALUE(SN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S/N</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handover_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover Condition</label>
        <referenceTo>Conditions__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Types__c</fullName>
        <label>Issue Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Issue_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Item_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time__c</fullName>
        <label>Last Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_From__c</fullName>
        <label>Last Updated From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Checklist Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklist Items (Person In Charge)</relationshipLabel>
        <relationshipName>Checklist_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <label>S/N</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Checklist__r.Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <label>Checklist Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SN__c</columns>
        <columns>Status__c</columns>
        <columns>Number__c</columns>
        <columns>Backend_Last_Updated_DateTime__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Item_Type__c</columns>
        <columns>Issue_Types__c</columns>
        <columns>Last_Updated_From__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Backend_Last_Updated_DateTime__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/14/2017 8:27 PM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllHandoverChecklistItems</fullName>
        <columns>NAME</columns>
        <columns>Unit__c</columns>
        <columns>SN__c</columns>
        <columns>Status__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Checklist_Type__c</field>
            <operation>equals</operation>
            <value>Handover</value>
        </filters>
        <label>All Handover Checklist Items</label>
    </listViews>
    <listViews>
        <fullName>AllTakeoverChecklistItems</fullName>
        <columns>NAME</columns>
        <columns>Unit__c</columns>
        <columns>SN__c</columns>
        <columns>Status__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Checklist_Type__c</field>
            <operation>equals</operation>
            <value>Takeover</value>
        </filters>
        <label>All Takeover Checklist Items</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-CL-{00000000}</displayFormat>
        <label>Checklist Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>